# quizBot

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  terst.py
alembic/: env.py
migrations/: env.py  script.py.mako
migrations/versions/: 13a754582085_.py  215546eb5a32_.py  2a2e15e81d4f_.py  2d50c9aeaf53_.py  32cc23959ecb_.py  357334ff273a_.py  3d330b607ae0_.py  3ed2dfbec898_add_admin_flag.py  4b3f8c5470ee_.py  5dc6b7ae480c_.py  66e74d650591_.py  8579bca51388_.py  9376c5e63130_.py  aa26cf8aaee1_.py  aa83ace062c7_.py  b50340baf4e1_.py  c853afc4aabc_.py  ce81c46b38af_.py  d32143bca838_update_user.py  d7aff0f7d8c1_.py  dd17277b109b_.py  e38f25c623fb_.py  e8854c509a84_.py  f2e99912154f_.py  f914c188678d_.py  fd65d07847c6_.py  fd7d8259aa0f_.py
src/: app.py
src/admin/: admin.py
src/bot/: bot.py  common.py  cv.py  handlers.py  start.py  states.py
src/bot/fsm/: state_fsm.py  state_machine.py
src/bot/gameplay/: answer.py  game.py  hint.py  intro.py
src/bot/handlers/: answer.py  game.py  handle_object_recognition.py  handlers.py  hint.py  intro.py  state_machine.py
src/bot/handlers/menu/: broadcast.py  comment.py  demo.py  get_main_menu.py  handle_next_question.py  handlers.py  hide_menu.py  info.py  menu_start.py  shop.py  subscribe.py
src/bot/utils/: errors.py  hint.py  levels.py  message_actions.py  skip_message.py  state.py  state_management.py
src/database/: __init__.py  custom_types.py  entity.py  models.py  repository.py  session.py  uow.py
src/dto/: convert.py  question.py
src/utils/: settings.py
