[tool.poetry]
name = "quizbottg"
version = "0.1.0"
description = ""
authors = ["kurbakov.Ilia <kurbakovila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
jinja2 = "^3.1.4"
fastapi-admin = "^1.0.4"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
aiogram = "^3.10.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
