[tool.poetry]
name = "quizbottg"
version = "0.1.0"
description = ""
authors = ["kurbakov.Ilia <kurbakovila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
aiogram = "^3.10.0"
passlib = "^1.7.4"
alembic = "^1.13.2"
redis = "^5.0.7"
python-dotenv = "^1.0.1"
sqladmin = "^0.18.0"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
itsdangerous = "^2.2.0"
loguru = "^0.7.2"
fastapi-storages = "^0.3.0"
opencv-python = "^4.10.0.84"
torch = "^2.4.0"
torchvision = "^0.19.0"
requests = "^2.32.3"
numpy = "<2.0"
bcrypt = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
